# agent-ops-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  run_mcp.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_focused_evaluation_loop.py  0002_runner_recovery.py
backend/app/: agent_runner.py  auto_replay.py  benchmarks.py  config.py  context_manager.py  database.py  demo_agent.py  docker_executor.py  event_bus.py  executor.py  exporters.py  failure.py  failure_analyzer.py  k8s_executor.py  legacy_main.py  llm.py  main.py  mcp_server.py  models.py  orchestrator.py  phase1_database.py  phase1_events.py  phase1_main.py  phase1_models.py  phase1_schemas.py  phase1_service.py  policy.py  policy_compiler.py  policy_pipeline.py  policy_store.py  recovery_agent.py  runtime.py  scoring.py  serializer.py  tool_registry.py  trajectory_repo.py
backend/app/adapters/: __init__.py  base.py  langchain_adapter.py  openai_agents_adapter.py
backend/app/memory/: __init__.py  embedder.py  retriever.py
backend/examples/: langchain_demo.py  openai_agents_demo.py
backend/phase1_tests/: conftest.py  test_completion_idempotency.py  test_control_plane.py  test_demo_agent.py  test_protocol_contract.py  test_recorded_preview_contract.py  test_runner_recovery.py  test_state_invariants.py
backend/scripts/: export_protocol_schema.py
backend/tests/: conftest.py  test_agent_runner.py  test_benchmark_api.py  test_closed_loop.py  test_context_manager.py  test_e2e_smoke.py  test_eval_api.py  test_export_api.py  test_failure.py  test_failure_analyzer.py  test_mcp_server.py  test_memory.py  test_policy.py  test_policy_compiler.py  test_policy_store.py  test_scoring.py  test_serializer.py  test_tool_registry.py
contracts/v1/: evaluation-spec.schema.json  event-envelope.schema.json
contracts/v1/fixtures/: evaluation-spec.baseline.json  (+1 more)
docs/: agentops_closed_loop_architecture.md  floofy-watching-stonebraker.md  handoff-v0.1-complete.md
docs/adr/: 0001-python-control-plane-rust-execution-plane.md  0002-runner-recovery.md
frontend/: Dockerfile  Dockerfile.prod  fix-icons.cjs  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  Phase1App.tsx  index.css  main.tsx
frontend/tests/: eval.spec.ts  phase1-recorded.spec.ts  policy.spec.ts
infra/docker/: docker-compose.phase1.recovery.yml  docker-compose.phase1.yml  docker-compose.yml
infra/k8s/: README.md  configmap.yaml  deployment-api.yaml  deployment-db.yaml  deployment-web.yaml  executor-rbac.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service-api.yaml  service-web.yaml
runner/: Cargo.toml  Dockerfile
runner/crates/agentops-cli/: Cargo.toml
runner/crates/agentops-cli/src/: main.rs
runner/crates/agentops-protocol/: Cargo.toml
runner/crates/agentops-protocol/src/: lib.rs
runner/crates/agentops-protocol/tests/: golden_contract.rs
runner/crates/agentops-runner/: Cargo.toml
runner/crates/agentops-runner/src/: lib.rs  supervisor_tests.rs
scripts/: golden_e2e.py  record_golden_fixture.py  recovery_e2e.py
sdk/agentops-analyze/: Cargo.toml
sdk/agentops-analyze/src/: live_logs.rs  main.rs
(+68 files in other folders)
