[project]
name = "agentops-api"
version = "0.1.0"
description = "AgentOps Platform - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "docker>=7.0.0,<8.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "mcp>=1.28.0",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]
openai-agents = [
    "openai-agents>=0.1.0",
]
k8s = [
    "kubernetes>=31.0.0,<32.0.0",
]
all = [
    "agentops-api[langchain,openai-agents,k8s]",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
]
