[project]
name = "agentops-api"
version = "0.1.0"
description = "AgentOps focused evaluation workbench control plane"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
]
