[package]
name = "agentops-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentops"
path = "src/main.rs"

[dependencies]
agentops-protocol = { path = "../agentops-protocol" }
agentops-runner = { path = "../agentops-runner" }
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
