[package]
name = "agentops-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentops-protocol = { path = "../agentops-protocol" }
anyhow.workspace = true
chrono.workspace = true
nix.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
